ADD control of showcase from admin panel;