@@ -267,17 +267,18 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <argLine>
-                        -XX:+EnableDynamicAgentLoading
-                        -Xshare:off
-                    </argLine>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <argLine>${surefireArgLine}</argLine>
+<!--                    <argLine>-->
+<!--                        -XX:+EnableDynamicAgentLoading-->
+<!--                        -Xshare:off-->
+<!--                    </argLine>-->
+<!--                    <argLine>-->
+<!--                        &#45;&#45;illegal-access=permit-->
+<!--                    </argLine>-->
+<!--                    <testFailureIgnore>true</testFailureIgnore>-->
+<!--                    <forkCount>1</forkCount>-->
+<!--                    <reuseForks>false</reuseForks>-->
+<!--                    <argLine>${surefireArgLine}</argLine>-->
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
         </plugins>
